        Thereby, fields are now ordered by name. Except the title, which is written first.
      * The second word in of the BibTeX type is capitalized. E.g., Inproceedings got InProceedings
      * Configurable: Start field contents in same column. Enabled by default.
      * Configurable: Use camel case for field names (e.g., "HowPublished" instead of "howpublished"). Enabled by default.
    - Saving a part of the database now also writes entries with a crossref field first.
    - Author field is now resolved using @String data.
    - A custom proxy can be specified (patch 198 by Michael).
    - Default key binding for Write XMP is now "CTRL+F7" instead of "CTRL+F4"
      as the latter conflicts with "Synchronize files" (by Adrian Daerr)
    - WriteXMPAction now uses database to resolve strings even for selected entries (by Adrian Daerr)
    - Extend XMP privacy filtering to Dublin Core Schema (by Adrian Daerr)
    - IEEE search should include author field again (patch 201 by Christopher S. Lester, fixes bug 1137)
2.9.2
    - Fixed handling of empty author parts in rare cases. Fixes bug 1124.
    - Fetchers work again: Import inspection dialog is not modal any more.
2.9.1
    - Command line option --importToOpen now also adds to an open tab when JabRef is launched.
    - Importing of entries works again. Fixes bug 1121.
    - Import inspection dialog is now modal.
    - Replaced Java launcher by launch4j. Fixes bugs 1100, 1103, 1123.
    - Menu font size can now be changed again. Help contents are also enlarged accordingly. Fixes bug 1122.
2.9
    - Fixed bug: in OO/LO reference lists, entries may fall out when multiple entries with same
      author and year are cited.
    - Added support for converting HTML combining accents to LaTeX
    - When generating subdatabase from AUX file, preamble and strings are now included from
      the source database.
    - Added cleanup action for removing redundant $, {, and }